--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     </ul>
     </h3>
     <h2>Is what I head from so and so true?</h2>
-    <h3><strike>probably.</strike> Yes.</h3>
+    <h3><strike>probably. Google™ is your friend.</strike> Yes.</h3>
     <h6>All Sexy Rights Reserved &copy; 2016</h6>
 </body>
 
