--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <li>Twitter: <a href="https://twitter.com/luigiplr">https://twitter.com/luigiplr</a></li>
     </ul>
     </h3>
-    <h2>Is what I head from so and so true?</h2>
+    <h2>Is what I heard from so and so true?</h2>
     <h3><strike>probably. Google™ is your friend.</strike> Yes.</h3>
     <h6>All Sexy Rights Reserved &copy; 2016</h6>
 </body>
