--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <h1>Commonly asked questions:</h1>
     <br>
     <h2>But Why?</h2>
-    <h3>Why For the glory of satan of course.</h3>
+    <h3>Why for the glory of satan of course.</h3>
     <h2>Who are you?</h2>
     <h3>I am Luigi. I write software and set fire to pizza's. Not always in that order.</h3>
     <h2>This site reeks of 1990. WHERE ARE YOUR STYLING AJHSGAHFS</h2>
