--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <h2>But Why?</h2>
     <h3>Why for the glory of satan of course.</h3>
     <h2>Who are you?</h2>
-    <h3>I am Luigi. I write software and set fire to pizza's. Not always in that order.</h3>
+    <h3>I am Luigi. I write software and set fire to pizza(s). Not always in that order.</h3>
     <h2>This site reeks of 1990. WHERE ARE YOUR STYLING AJHSGAHFS</h2>
     <h3>I am many things, however designer is not one of them; See LinkedIn. (available below).     
    alternatively you can reach me at <a href="mailto:luigi@violently.sexy?Subject=Well%20Hello%20There" target="_top">luigi@violently.sexy</a> 
